--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.volley:volley:1.1.0'
     //Database
     /* android {
         useLibrary 'org.apache.http.legacy'
